Updated prompt hiding experiment, this is how it is implemented in IDLdoc.

--- a/experiments/prompt_hiding.html
+++ b/experiments/prompt_hiding.html
@@ -10,10 +10,24 @@
   </head>
   
   <body>
-    <code class="listing"><span class="code-prompt">IDL> </span>a = 5
+
+      <p>Here is some code:
+    <div><div>
+        <code class="listing"><span class="code-prompt">IDL> </span>a = 5
+  <span class="code-prompt">IDL> </span>print, a
+  <span class="code-output">       5</span>
+  <span class="code-prompt">IDL> </span>help, a
+  <span class="code-output">A               INT       =        5</span></code>
+    </div></div> 
+Here is some more code:
+        <div><div>
+        <code class="listing"><span class="code-prompt">IDL> </span>a = 5
 <span class="code-prompt">IDL> </span>print, a
 <span class="code-output">       5</span>
 <span class="code-prompt">IDL> </span>help, a
 <span class="code-output">A               INT       =        5</span></code>
+    </div></div>
+</p>
+
   </body>  
 </html>
